refactoring flows and add dev property file

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,6 @@
-#mié oct 03 13:34:29 CDT 2018
-encoding=UTF-8
-domain=default
+#** GENERATED CONTENT ** Mule Application Deployment Descriptor
+#Thu Oct 04 09:35:06 CDT 2018
 redeployment.enabled=true
-config.resources=poc_nisc_service_assurance_process_ap.xml
+encoding=UTF-8
+config.resources=poc_nisc_service_assurance_process_ap.xml,poc_nisc_service_assurance_process_api_config.xml,service_assurance_process_api_business.xml
+domain=default
