--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Thu Oct 04 09:35:06 CDT 2018
+#Mon Oct 08 15:42:18 CDT 2018
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=poc_nisc_service_assurance_process_ap.xml,poc_nisc_service_assurance_process_api_config.xml,service_assurance_process_api_business.xml
 domain=default
+config.resources=poc_nisc_service_assurance_process_ap.xml,poc_nisc_service_assurance_process_api_config.xml,poc_nisc_service_assurance_process_api_console.xml,service_assurance_process_api_business.xml
